# deduplication

./: .gitignore  CLAUDE.md  README.md  SPEC.md  environment.yml  pyproject.toml
configs/: default.yaml  demo.yaml
dedup/: __init__.py  cli.py  config.py
dedup/clustering/: __init__.py  cluster.py  union_find.py
dedup/embeddings/: __init__.py  extractor.py  loader.py  semantic.py  store.py
dedup/hashing/: __init__.py  exact.py  near.py  perceptual.py  search.py  storage.py
dedup/indexing/: __init__.py  base.py  flat.py  ivfflat.py  ivfpq.py  selector.py
dedup/io/: __init__.py  annotations.py  coco.py  images.py  state.py  video.py
dedup/leakage/: __init__.py  check.py
dedup/profiling/: __init__.py  _detector.py  metrics.py  profiler.py  report.py  score.py  train_twice.py
dedup/resolution/: __init__.py  stage4.py  strategies.py
docs/: design-decisions.md
scripts/: __init__.py  fetch_coco_subset.py  make_leakage_demo.py  plant_duplicates.py
tests/: test_cli.py  test_coco.py  test_config.py  test_indexing.py  test_leakage.py  test_plant.py  test_report.py  test_resolution.py  test_score.py  test_search.py  test_stage1.py  test_store.py  test_union_find.py  test_video.py
